--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "osuwams/feeds_display",
+  "name": "osuwams/live_feeds",
   "description": "OSU Module to display feeds from Today.oregonstate.edu and events from Localist.",
   "minimum-stability": "stable",
-  "license": "GPL-2.0",
+  "license": "GPL-2.0-or-later",
   "type": "drupal-module-osu",
   "authors": [
     {
