--- a/live_feeds.info.yml
+++ b/live_feeds.info.yml
@@ -1,8 +1,8 @@
 name: Live Feeds
 type: module
-description: Feeds Parser for the Module
+description: Display feeds on your dupal site from other locations
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: Feeds
 dependencies:
   - drupal:block
-version: 1.6
