--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "osuwams/live_feeds",
+  "name": "osu-wams/live_feeds",
   "type": "drupal-module-osu",
   "description": "OSU Module to display feeds from Today.oregonstate.edu and events from Localist.",
   "minimum-stability": "stable",
