--- a/live_feeds.info.yml
+++ b/live_feeds.info.yml
@@ -1,8 +1,9 @@
 name: Live Feeds
 type: module
-description: Display feeds on your dupal site from other locations
-core: 8.x
-core_version_requirement: ^8 || ^9
+description: Display feeds on your drupal site from other locations
+core_version_requirement: ^9 || ^10
+version: 2.0.0
 package: Feeds
 dependencies:
   - drupal:block
+  - date_ap_style:date_ap_style
